Phase3/alpha-master/compiler/parser.output
State 104 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 $@1: %empty

    3 statements: statements $@1 statement
    4           | statement

    5 statement: expression SEMICOLON
    6          | ifstmt
    7          | whilestmt
    8          | forstmt
    9          | returnstmt
   10          | BREAK SEMICOLON
   11          | CONTINUE SEMICOLON
   12          | block
   13          | funcdef
   14          | SEMICOLON

   15 expression: assignexpr
   16           | expression PLUS expression
   17           | expression MINUS expression
   18           | expression MULT expression
   19           | expression DIV expression
   20           | expression MOD expression
   21           | expression GREATER_THAN expression
   22           | expression GREATER_OR_EQUAL expression
   23           | expression LESS_THAN expression
   24           | expression LESS_OR_EQUAL expression

   25 $@2: %empty

   26 expression: expression EQUALS_EQUALS $@2 expression

   27 $@3: %empty

   28 expression: expression NOT_EQUALS $@3 expression

   29 $@4: %empty

   30 expression: expression AND $@4 M expression

   31 $@5: %empty

   32 expression: expression OR $@5 M expression
   33           | term

   34 M: %empty

   35 term: LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
   36     | MINUS expression
   37     | NOT expression
   38     | PLUS_PLUS lvalue
   39     | lvalue PLUS_PLUS
   40     | MINUS_MINUS lvalue
   41     | lvalue MINUS_MINUS
   42     | primary

   43 $@6: %empty

   44 assignexpr: lvalue $@6 EQUALS expression

   45 primary: lvalue
   46        | call
   47        | objectdef
   48        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   49        | const

   50 lvalue: ID
   51       | LOCAL ID
   52       | DOUBLE_COLON ID
   53       | member

   54 member: lvalue DOT ID
   55       | lvalue LEFT_BRACE expression RIGHT_BRACE
   56       | call DOT ID
   57       | call LEFT_BRACE expression RIGHT_BRACE

   58 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   59     | lvalue callsuffix
   60     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   61 callsuffix: normcall
   62           | methodcall

   63 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   64 methodcall: DOUBLE_DOT ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   65 elist: expression
   66      | expression COMMA elist
   67      | %empty

   68 objectdef: LEFT_BRACE elist RIGHT_BRACE
   69          | LEFT_BRACE indexed RIGHT_BRACE

   70 indexed: indexedelem
   71        | indexedelem COMMA indexed

   72 indexedelem: LEFT_BRACKET expression COLON expression RIGHT_BRACKET

   73 block: blockstart blockend
   74      | blockstart blockstmt blockend

   75 blockstart: LEFT_BRACKET

   76 blockend: RIGHT_BRACKET

   77 blockstmt: statement
   78          | statement blockstmt

   79 $@7: %empty

   80 $@8: %empty

   81 $@9: %empty

   82 funcdef: funcstart LEFT_PARENTHESIS $@7 idlist $@8 RIGHT_PARENTHESIS $@9 block

   83 funcstart: FUNCTION ID
   84          | FUNCTION

   85 const: NUM
   86      | STRING
   87      | NIL
   88      | TRUE
   89      | FALSE

   90 idlist: arg
   91       | arg COMMA idlist
   92       | %empty

   93 arg: ID

   94 ifstmt: ifprefix statement
   95       | ifprefix statement elseprefix statement

   96 elseprefix: ELSE

   97 $@10: %empty

   98 ifprefix: IF LEFT_PARENTHESIS $@10 expression RIGHT_PARENTHESIS

   99 whilestart: WHILE

  100 $@11: %empty

  101 whilecond: LEFT_PARENTHESIS $@11 expression RIGHT_PARENTHESIS

  102 whilestmt: whilestart whilecond statement

  103 forprefix: forstart elist SEMICOLON M expression SEMICOLON

  104 forstart: FOR LEFT_PARENTHESIS

  105 forstmt: forprefix N elist RIGHT_PARENTHESIS N statement N

  106 N: %empty

  107 returnstmt: RETURN SEMICOLON
  108           | RETURN expression SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <numValue> (258) 85
    ID <strValue> (259) 50 51 52 54 56 64 83 93
    STRING <strValue> (260) 86
    IF <strValue> (261) 98
    ELSE <strValue> (262) 96
    WHILE <strValue> (263) 99
    FOR <strValue> (264) 104
    FUNCTION <strValue> (265) 83 84
    RETURN <strValue> (266) 107 108
    BREAK <strValue> (267) 10
    CONTINUE <strValue> (268) 11
    AND <strValue> (269) 30
    NOT <strValue> (270) 37
    OR <strValue> (271) 32
    LOCAL <strValue> (272) 51
    TRUE <strValue> (273) 88
    FALSE <strValue> (274) 89
    NIL <strValue> (275) 87
    LEFT_BRACE <strValue> (276) 55 57 68 69
    RIGHT_BRACE <strValue> (277) 55 57 68 69
    LEFT_BRACKET <strValue> (278) 72 75
    RIGHT_BRACKET <strValue> (279) 72 76
    LEFT_PARENTHESIS <strValue> (280) 35 48 58 60 63 64 82 98 101 104
    RIGHT_PARENTHESIS <strValue> (281) 35 48 58 60 63 64 82 98 101 105
    SEMICOLON <strValue> (282) 5 10 11 14 103 107 108
    COMMA <strValue> (283) 66 71 91
    COLON <strValue> (284) 72
    DOUBLE_COLON <strValue> (285) 52
    DOT <strValue> (286) 54 56
    DOUBLE_DOT <strValue> (287) 64
    EQUALS <strValue> (288) 44
    PLUS <strValue> (289) 16
    MINUS <strValue> (290) 17 36
    MULT <strValue> (291) 18
    DIV <strValue> (292) 19
    MOD <strValue> (293) 20
    EQUALS_EQUALS <strValue> (294) 26
    NOT_EQUALS <strValue> (295) 28
    PLUS_PLUS <strValue> (296) 38 39
    MINUS_MINUS <strValue> (297) 40 41
    GREATER_THAN <strValue> (298) 21
    LESS_THAN <strValue> (299) 23
    GREATER_OR_EQUAL <strValue> (300) 22
    LESS_OR_EQUAL <strValue> (301) 24
    UMINUS <strValue> (302)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program (49)
        on left: 1
        on right: 0
    statements <stmtValue> (50)
        on left: 3 4
        on right: 1 3
    $@1 (51)
        on left: 2
        on right: 3
    statement <stmtValue> (52)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 3 4 77 78 94 95 102 105
    expression <exprValue> (53)
        on left: 15 16 17 18 19 20 21 22 23 24 26 28 30 32 33
        on right: 5 16 17 18 19 20 21 22 23 24 26 28 30 32 35 36 37 44 55 57 65 66 72 98 101 103 108
    $@2 (54)
        on left: 25
        on right: 26
    $@3 (55)
        on left: 27
        on right: 28
    $@4 (56)
        on left: 29
        on right: 30
    $@5 (57)
        on left: 31
        on right: 32
    M <numValue> (58)
        on left: 34
        on right: 30 32 103
    term <exprValue> (59)
        on left: 35 36 37 38 39 40 41 42
        on right: 33
    assignexpr <exprValue> (60)
        on left: 44
        on right: 15
    $@6 (61)
        on left: 43
        on right: 44
    primary <exprValue> (62)
        on left: 45 46 47 48 49
        on right: 42
    lvalue <exprValue> (63)
        on left: 50 51 52 53
        on right: 38 39 40 41 44 45 54 55 59
    member <strValue> (64)
        on left: 54 55 56 57
        on right: 53
    call <exprValue> (65)
        on left: 58 59 60
        on right: 46 56 57 58
    callsuffix <functionCall> (66)
        on left: 61 62
        on right: 59
    normcall <functionCall> (67)
        on left: 63
        on right: 61
    methodcall <functionCall> (68)
        on left: 64
        on right: 62
    elist <exprValue> (69)
        on left: 65 66 67
        on right: 58 60 63 64 66 68 103 105
    objectdef <exprValue> (70)
        on left: 68 69
        on right: 47
    indexed <exprValue> (71)
        on left: 70 71
        on right: 69 71
    indexedelem <exprValue> (72)
        on left: 72
        on right: 70 71
    block <stmtValue> (73)
        on left: 73 74
        on right: 12 82
    blockstart (74)
        on left: 75
        on right: 73 74
    blockend (75)
        on left: 76
        on right: 73 74
    blockstmt <stmtValue> (76)
        on left: 77 78
        on right: 74 78
    funcdef <exprValue> (77)
        on left: 82
        on right: 13 48 60
    $@7 (78)
        on left: 79
        on right: 82
    $@8 (79)
        on left: 80
        on right: 82
    $@9 (80)
        on left: 81
        on right: 82
    funcstart <exprValue> (81)
        on left: 83 84
        on right: 82
    const <exprValue> (82)
        on left: 85 86 87 88 89
        on right: 49
    idlist <strValue> (83)
        on left: 90 91 92
        on right: 82 91
    arg <exprValue> (84)
        on left: 93
        on right: 90 91
    ifstmt <stmtValue> (85)
        on left: 94 95
        on right: 6
    elseprefix <numValue> (86)
        on left: 96
        on right: 95
    ifprefix <numValue> (87)
        on left: 98
        on right: 94 95
    $@10 (88)
        on left: 97
        on right: 98
    whilestart <numValue> (89)
        on left: 99
        on right: 102
    whilecond <numValue> (90)
        on left: 101
        on right: 102
    $@11 (91)
        on left: 100
        on right: 101
    whilestmt <stmtValue> (92)
        on left: 102
        on right: 7
    forprefix <exprValue> (93)
        on left: 103
        on right: 105
    forstart (94)
        on left: 104
        on right: 103
    forstmt <stmtValue> (95)
        on left: 105
        on right: 8
    N <numValue> (96)
        on left: 106
        on right: 105
    returnstmt <stmtValue> (97)
        on left: 107 108
        on right: 9


State 0

    0 $accept: . program $end

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    IF                shift, and go to state 4
    WHILE             shift, and go to state 5
    FOR               shift, and go to state 6
    FUNCTION          shift, and go to state 7
    RETURN            shift, and go to state 8
    BREAK             shift, and go to state 9
    CONTINUE          shift, and go to state 10
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_BRACKET      shift, and go to state 17
    LEFT_PARENTHESIS  shift, and go to state 18
    SEMICOLON         shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    program     go to state 24
    statements  go to state 25
    statement   go to state 26
    expression  go to state 27
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    block       go to state 35
    blockstart  go to state 36
    funcdef     go to state 37
    funcstart   go to state 38
    const       go to state 39
    ifstmt      go to state 40
    ifprefix    go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstart    go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 1

   85 const: NUM .

    $default  reduce using rule 85 (const)


State 2

   50 lvalue: ID .

    $default  reduce using rule 50 (lvalue)


State 3

   86 const: STRING .

    $default  reduce using rule 86 (const)


State 4

   98 ifprefix: IF . LEFT_PARENTHESIS $@10 expression RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 48


State 5

   99 whilestart: WHILE .

    $default  reduce using rule 99 (whilestart)


State 6

  104 forstart: FOR . LEFT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 49


State 7

   83 funcstart: FUNCTION . ID
   84          | FUNCTION .

    ID  shift, and go to state 50

    $default  reduce using rule 84 (funcstart)


State 8

  107 returnstmt: RETURN . SEMICOLON
  108           | RETURN . expression SEMICOLON

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    SEMICOLON         shift, and go to state 51
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 52
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 9

   10 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 10

   11 statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 11

   37 term: NOT . expression

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 55
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 12

   51 lvalue: LOCAL . ID

    ID  shift, and go to state 56


State 13

   88 const: TRUE .

    $default  reduce using rule 88 (const)


State 14

   89 const: FALSE .

    $default  reduce using rule 89 (const)


State 15

   87 const: NIL .

    $default  reduce using rule 87 (const)


State 16

   68 objectdef: LEFT_BRACE . elist RIGHT_BRACE
   69          | LEFT_BRACE . indexed RIGHT_BRACE

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_BRACKET      shift, and go to state 57
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    $default  reduce using rule 67 (elist)

    expression   go to state 58
    term         go to state 28
    assignexpr   go to state 29
    primary      go to state 30
    lvalue       go to state 31
    member       go to state 32
    call         go to state 33
    elist        go to state 59
    objectdef    go to state 34
    indexed      go to state 60
    indexedelem  go to state 61
    const        go to state 39


State 17

   75 blockstart: LEFT_BRACKET .

    $default  reduce using rule 75 (blockstart)


State 18

   35 term: LEFT_PARENTHESIS . expression RIGHT_PARENTHESIS
   48 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   60 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    FUNCTION          shift, and go to state 7
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 62
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    funcdef     go to state 63
    funcstart   go to state 38
    const       go to state 39


State 19

   14 statement: SEMICOLON .

    $default  reduce using rule 14 (statement)


State 20

   52 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 64


State 21

   36 term: MINUS . expression

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 65
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 22

   38 term: PLUS_PLUS . lvalue

    ID                shift, and go to state 2
    LOCAL             shift, and go to state 12
    LEFT_PARENTHESIS  shift, and go to state 66
    DOUBLE_COLON      shift, and go to state 20

    lvalue  go to state 67
    member  go to state 32
    call    go to state 68


State 23

   40 term: MINUS_MINUS . lvalue

    ID                shift, and go to state 2
    LOCAL             shift, and go to state 12
    LEFT_PARENTHESIS  shift, and go to state 66
    DOUBLE_COLON      shift, and go to state 20

    lvalue  go to state 69
    member  go to state 32
    call    go to state 68


State 24

    0 $accept: program . $end

    $end  shift, and go to state 70


State 25

    1 program: statements .
    3 statements: statements . $@1 statement

    $end      reduce using rule 1 (program)
    $default  reduce using rule 2 ($@1)

    $@1  go to state 71


State 26

    4 statements: statement .

    $default  reduce using rule 4 (statements)


State 27

    5 statement: expression . SEMICOLON
   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   26           | expression . EQUALS_EQUALS $@2 expression
   28           | expression . NOT_EQUALS $@3 expression
   30           | expression . AND $@4 M expression
   32           | expression . OR $@5 M expression

    AND               shift, and go to state 72
    OR                shift, and go to state 73
    SEMICOLON         shift, and go to state 74
    PLUS              shift, and go to state 75
    MINUS             shift, and go to state 76
    MULT              shift, and go to state 77
    DIV               shift, and go to state 78
    MOD               shift, and go to state 79
    EQUALS_EQUALS     shift, and go to state 80
    NOT_EQUALS        shift, and go to state 81
    GREATER_THAN      shift, and go to state 82
    LESS_THAN         shift, and go to state 83
    GREATER_OR_EQUAL  shift, and go to state 84
    LESS_OR_EQUAL     shift, and go to state 85


State 28

   33 expression: term .

    $default  reduce using rule 33 (expression)


State 29

   15 expression: assignexpr .

    $default  reduce using rule 15 (expression)


State 30

   42 term: primary .

    $default  reduce using rule 42 (term)


State 31

   39 term: lvalue . PLUS_PLUS
   41     | lvalue . MINUS_MINUS
   44 assignexpr: lvalue . $@6 EQUALS expression
   45 primary: lvalue .
   54 member: lvalue . DOT ID
   55       | lvalue . LEFT_BRACE expression RIGHT_BRACE
   59 call: lvalue . callsuffix

    LEFT_BRACE        shift, and go to state 86
    LEFT_PARENTHESIS  shift, and go to state 87
    DOT               shift, and go to state 88
    DOUBLE_DOT        shift, and go to state 89
    PLUS_PLUS         shift, and go to state 90
    MINUS_MINUS       shift, and go to state 91

    EQUALS    reduce using rule 43 ($@6)
    $default  reduce using rule 45 (primary)

    $@6         go to state 92
    callsuffix  go to state 93
    normcall    go to state 94
    methodcall  go to state 95


State 32

   53 lvalue: member .

    $default  reduce using rule 53 (lvalue)


State 33

   46 primary: call .
   56 member: call . DOT ID
   57       | call . LEFT_BRACE expression RIGHT_BRACE
   58 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACE        shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 97
    DOT               shift, and go to state 98

    $default  reduce using rule 46 (primary)


State 34

   47 primary: objectdef .

    $default  reduce using rule 47 (primary)


State 35

   12 statement: block .

    $default  reduce using rule 12 (statement)


State 36

   73 block: blockstart . blockend
   74      | blockstart . blockstmt blockend

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    IF                shift, and go to state 4
    WHILE             shift, and go to state 5
    FOR               shift, and go to state 6
    FUNCTION          shift, and go to state 7
    RETURN            shift, and go to state 8
    BREAK             shift, and go to state 9
    CONTINUE          shift, and go to state 10
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_BRACKET      shift, and go to state 17
    RIGHT_BRACKET     shift, and go to state 99
    LEFT_PARENTHESIS  shift, and go to state 18
    SEMICOLON         shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    statement   go to state 100
    expression  go to state 27
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    block       go to state 35
    blockstart  go to state 36
    blockend    go to state 101
    blockstmt   go to state 102
    funcdef     go to state 37
    funcstart   go to state 38
    const       go to state 39
    ifstmt      go to state 40
    ifprefix    go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstart    go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 37

   13 statement: funcdef .

    $default  reduce using rule 13 (statement)


State 38

   82 funcdef: funcstart . LEFT_PARENTHESIS $@7 idlist $@8 RIGHT_PARENTHESIS $@9 block

    LEFT_PARENTHESIS  shift, and go to state 103


State 39

   49 primary: const .

    $default  reduce using rule 49 (primary)


State 40

    6 statement: ifstmt .

    $default  reduce using rule 6 (statement)


State 41

   94 ifstmt: ifprefix . statement
   95       | ifprefix . statement elseprefix statement

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    IF                shift, and go to state 4
    WHILE             shift, and go to state 5
    FOR               shift, and go to state 6
    FUNCTION          shift, and go to state 7
    RETURN            shift, and go to state 8
    BREAK             shift, and go to state 9
    CONTINUE          shift, and go to state 10
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_BRACKET      shift, and go to state 17
    LEFT_PARENTHESIS  shift, and go to state 18
    SEMICOLON         shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    statement   go to state 104
    expression  go to state 27
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    block       go to state 35
    blockstart  go to state 36
    funcdef     go to state 37
    funcstart   go to state 38
    const       go to state 39
    ifstmt      go to state 40
    ifprefix    go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstart    go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 42

  102 whilestmt: whilestart . whilecond statement

    LEFT_PARENTHESIS  shift, and go to state 105

    whilecond  go to state 106


State 43

    7 statement: whilestmt .

    $default  reduce using rule 7 (statement)


State 44

  105 forstmt: forprefix . N elist RIGHT_PARENTHESIS N statement N

    $default  reduce using rule 106 (N)

    N  go to state 107


State 45

  103 forprefix: forstart . elist SEMICOLON M expression SEMICOLON

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    $default  reduce using rule 67 (elist)

    expression  go to state 58
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    elist       go to state 108
    objectdef   go to state 34
    const       go to state 39


State 46

    8 statement: forstmt .

    $default  reduce using rule 8 (statement)


State 47

    9 statement: returnstmt .

    $default  reduce using rule 9 (statement)


State 48

   98 ifprefix: IF LEFT_PARENTHESIS . $@10 expression RIGHT_PARENTHESIS

    $default  reduce using rule 97 ($@10)

    $@10  go to state 109


State 49

  104 forstart: FOR LEFT_PARENTHESIS .

    $default  reduce using rule 104 (forstart)


State 50

   83 funcstart: FUNCTION ID .

    $default  reduce using rule 83 (funcstart)


State 51

  107 returnstmt: RETURN SEMICOLON .

    $default  reduce using rule 107 (returnstmt)


State 52

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   26           | expression . EQUALS_EQUALS $@2 expression
   28           | expression . NOT_EQUALS $@3 expression
   30           | expression . AND $@4 M expression
   32           | expression . OR $@5 M expression
  108 returnstmt: RETURN expression . SEMICOLON

    AND               shift, and go to state 72
    OR                shift, and go to state 73
    SEMICOLON         shift, and go to state 110
    PLUS              shift, and go to state 75
    MINUS             shift, and go to state 76
    MULT              shift, and go to state 77
    DIV               shift, and go to state 78
    MOD               shift, and go to state 79
    EQUALS_EQUALS     shift, and go to state 80
    NOT_EQUALS        shift, and go to state 81
    GREATER_THAN      shift, and go to state 82
    LESS_THAN         shift, and go to state 83
    GREATER_OR_EQUAL  shift, and go to state 84
    LESS_OR_EQUAL     shift, and go to state 85


State 53

   10 statement: BREAK SEMICOLON .

    $default  reduce using rule 10 (statement)


State 54

   11 statement: CONTINUE SEMICOLON .

    $default  reduce using rule 11 (statement)


State 55

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   26           | expression . EQUALS_EQUALS $@2 expression
   28           | expression . NOT_EQUALS $@3 expression
   30           | expression . AND $@4 M expression
   32           | expression . OR $@5 M expression
   37 term: NOT expression .

    $default  reduce using rule 37 (term)


State 56

   51 lvalue: LOCAL ID .

    $default  reduce using rule 51 (lvalue)


State 57

   72 indexedelem: LEFT_BRACKET . expression COLON expression RIGHT_BRACKET

    NUM               shift, and go to state 1
    ID                shift, and go to state 2
    STRING            shift, and go to state 3
    NOT               shift, and go to state 11
    LOCAL             shift, and go to state 12
    TRUE              shift, and go to state 13
    FALSE             shift, and go to state 14
    NIL               shift, and go to state 15
    LEFT_BRACE        shift, and go to state 16
    LEFT_PARENTHESIS  shift, and go to state 18
    DOUBLE_COLON      shift, and go to state 20
    MINUS             shift, and go to state 21
    PLUS_PLUS         shift, and go to state 22
    MINUS_MINUS       shift, and go to state 23

    expression  go to state 111
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 58

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   26           | expression . EQUALS_EQUALS $@2 expression
   28           | expression . NOT_EQUALS $@3 expression
   30           | expression . AND $@4 M expression
   32           | expression . OR $@5 M expression
   65 elist: expression .
   66      | expression . COMMA elist

    AND               shift, and go to state 72
    OR                shift, and go to state 73
    COMMA             shift, and go to state 112
    PLUS              shift, and go to state 75
    MINUS             shift, and go to state 76
    MULT              shift, and go to state 77
    DIV               shift, and go to state 78
    MOD               shift, and go to state 79
    EQUALS_EQUALS     shift, and go to state 80
    NOT_EQUALS        shift, and go to state 81
    GREATER_THAN      shift, and go to state 82
    LESS_THAN         shift, and go to state 83
    GREATER_OR_EQUAL  shift, and go to state 84
    LESS_OR_EQUAL     shift, and go to state 85

    $default  reduce using rule 65 (elist)


State 59

   68 objectdef: LEFT_BRACE elist . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 113


State 60

   69 objectdef: LEFT_BRACE indexed . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 114


State 61

   70 indexed: indexedelem .
   71        | indexedelem . COMMA indexed

    COMMA  shift, and go to state 115

    $default  reduce using rule 70 (indexed)


State 62

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   26           | expression . EQUALS_EQUALS $@2 expression
   28           | expression . NOT_EQUALS $@3 expression
   30           | expression . AND $@4 M expression
   32           | expression . OR $@5 M expression
   35 term: LEFT_PARENTHESIS expression . RIGHT_PARENTHESIS

    AND                shift, and go to state 72
    OR                 shift, and go to state 73
    RIGHT_PARENTHESIS  shift, and go to state 116
    PLUS               shift, and go to state 75
    MINUS              shift, and go to state 76
    MULT               shift, and go to state 77
    DIV                shift, and go to state 78
    MOD                shift, and go to state 79
    EQUALS_EQUALS      shift, and go to state 80
    NOT_EQUALS         shift, and go to state 81
    GREATER_THAN       shift, and go to state 82
    LESS_THAN          shift, and go to state 83
    GREATER_OR_EQUAL   shift, and go to state 84
    LESS_OR_EQUAL      shift, and go to state 85


State 63

   48 primary: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS
   60 call: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 117


State 64

   52 lvalue: DOUBLE_COLON ID .

    $default  reduce using rule 52 (lvalue)


State 65

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULT expression
   19           | expression . DIV expression
   20           | expression . MOD expression
   21           | expression . GREATER_THAN expression
   22           | expression . GREATER_OR_EQUAL expression
   23           | expression . LESS_THAN expression
   24           | expression . LESS_OR_EQUAL expression
   26           | expression . EQUALS_EQUALS $@2 expression
   28           | expression . NOT_EQUALS $@3 expression
   30           | expression . AND $@4 M expression
   32           | expression . OR $@5 M expression
   36 term: MINUS expression .

    $default  reduce using rule 36 (term)


State 66
